# DirectXBase

./: .gitignore  CMakeLists.txt  DirectXBase.vcxproj  Header.h  READMD.md  Source.cpp
Include/: D3dApp.h  D3dAppChap4.h  GameTimer.h
src/: CMakeLists.txt  D3dApp.cpp  D3dAppChap4.cpp  GameTimer.cpp  Main.cpp
